test/bad/bad_block_05.mpp
var x:int;
begin
    while 1 do { read x };
end
